第二次：添加UI组件：动态效果--轮播图。

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,7 +1,12 @@
 @import "scroll";
+/*表格*/
 @import "table";
+/*登入*/
 @import "login";
+/*图标*/
 @import "icons";
+/*轮播图*/
+@import "banner";
 #root{
   height: 100%;
 }
