第五次：添加控制面板组件，并修其为默认路由

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -21,6 +21,8 @@
 @import "utils-border";
 @import "utils-spacing";
 @import "variables";
+/*控制面板卡片样式*/
+@import "card";
 #root{
   height: 100%;
 }
